RESULTS/AutoSpec/raw_results/out-4o-oopsla/045_0017/045_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/045_0017/045_merged.c:80:5: error: unterminated comment
   80 |     /*@;
      |     ^
